npm install lodash and modify product controller
